fix header overflow hidden

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,7 +4,7 @@
 /* 分數輸入區 */
 #header {
   background: #8AB9B2;
-  overflow: auto;
+  overflow: hidden;
   box-shadow: 0 0.5rem 2rem gray;
   h1, h2, h3, p, label {color: white;}
 
